# panchang

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare.py
crates/lilavati-core/: Cargo.toml
crates/lilavati-core/benches/: panchang_bench.rs
crates/lilavati-core/src/: angles.rs  batch.rs  constants.rs  festival.rs  ffi.rs  lib.rs  search.rs  types.rs
crates/lilavati-core/tests/: proptest_invariants.rs
crates/panchang-core/: Cargo.toml  build.rs
crates/panchang-core/benches/: panchang_bench.rs
crates/panchang-core/src/: batch.rs  ephemeris.rs  festival.rs  ffi.rs  julian.rs  lagna.rs  lib.rs  lunar_month.rs  muhurat.rs  observance.rs  panchang.rs  samvat.rs  sankranti.rs  search.rs  shraddha.rs  sun.rs
crates/panchang-core/tests/: lagna_reference.rs  proptest_invariants.rs
data/: festivals.yaml  regional_calendars.yaml
docs/: feature_roadmap.md  sota.md
docs/algorithms/: README.md  batch.md  ekadashi.md  festival-resolution.md  lunar-month.md  panchang.md  sankranti.md
python/panchang/: __init__.py  batch.py  panchang.py  types.py
python/panchang/calendar/: __init__.py  _data.py  festival.py  lunar_month.py  regional.py  sankranti.py  shraddha.py
python/panchang/core/: ephemeris.py  lagna.py  moon.py  panchang.py  sun.py
python/panchang/data/: festivals.yaml
python/panchang/muhurat/: __init__.py  windows.py
tests/: conftest.py  test_audit_regressions.py  test_batch.py  test_ephemeris.py  test_festival.py  test_lagna.py  test_lunar_month.py  test_panchang.py  test_reference_2026.py  test_regional.py  test_sankranti.py  test_shraddha.py  test_sun.py
