[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "panchang"
version = "0.2.14"
description = "Bhāratīya calendar infrastructure — Panchang, festivals, muhurat, and regional calendars"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "vibz.art"},
]
keywords = ["panchang", "hindu-calendar", "vedic", "astrology", "nakshatra", "tithi", "muhurat", "bharatiya-calendar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "maturin>=1.5",
]

[project.urls]
Homepage = "https://vibz.art"
Documentation = "https://github.com/vibzart/panchang"
Repository = "https://github.com/vibzart/panchang"
Issues = "https://github.com/vibzart/panchang/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/panchang-core/Cargo.toml"
module-name = "panchang._core"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
