[package]
name = "lilavati-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust computation engine for Lilavati Bhāratīya calendar library"

[lib]
name = "lilavati_core"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "panchang_bench"
harness = false
